--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height = 125\n",
+    "daily_distance = 30\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while snail_position <= well_height:\n",
+    "  snail_position += daily_distance\n",
+    "  days += 1\n",
+    "  if snail_position <= well_height:\n",
+    "    snail_position -= nightly_distance"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail spent  11  days in the well.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The snail spent \", days, \" days in the well.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +119,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail spent  5  days in the well.\n"
+     ]
+    }
+   ],
+   "source": [
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "well_height2 = 125\n",
+    "nightly_distance2 = 20\n",
+    "snail_position2 = 0\n",
+    "\n",
+    "days2 = 0\n",
+    "\n",
+    "for daily_distance2 in advance_cm:\n",
+    "  snail_position2 += daily_distance2\n",
+    "  if snail_position2 <= well_height2:\n",
+    "    snail_position2 -= nightly_distance2\n",
+    "    days2 += 1\n",
+    "\n",
+    "print(\"The snail spent \", days2, \" days in the well.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum distance has been:  57 cm\n",
+      "The minimum distance has been:  1 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "real_days = 0\n",
+    "max_dist = 0\n",
+    "min_dist = max(advance_cm)\n",
+    "while real_days < days2:\n",
+    "  if max_dist < advance_cm[real_days] - nightly_distance2:\n",
+    "    max_dist = advance_cm[real_days] - nightly_distance2\n",
+    "  if min_dist > advance_cm[real_days] - nightly_distance2:\n",
+    "    min_dist = advance_cm[real_days] - nightly_distance2\n",
+    "  real_days += 1\n",
+    "\n",
+    "print(\"The maximum distance has been: \", max_dist,\"cm\")\n",
+    "print(\"The minimum distance has been: \", min_dist,\"cm\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,16 +193,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average of the snail progress by day is:  21.0 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_dist = 0\n",
+    "for daycount in range(days2):\n",
+    "    sum_dist += advance_cm[daycount]\n",
+    "avg_dist = (sum_dist - nightly_distance2*days2)/days2\n",
+    "print(\"The average of the snail progress by day is: \", avg_dist, \"cm\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation is:  12.0 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "dev_dist = 0\n",
+    "for daycount2 in range(days2):\n",
+    "    dev_dist = (advance_cm[days2] - avg_dist)**2\n",
+    "dev_dist = (dev_dist/(days2 - 1))**(1/2)\n",
+    "print(\"The standard deviation is: \", dev_dist, \"cm\")"
    ]
   },
   {
@@ -161,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
