Complete all exercises

--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mintemp = min(temperatures_C)\n",
+    "print(mintemp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxtemp = max(temperatures_C)\n",
+    "print(maxtemp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp70 = []\n",
+    "\n",
+    "for temps in temperatures_C:\n",
+    "    if temps >= 70:\n",
+    "        temp70.append(temps)\n",
+    "\n",
+    "print(temp70)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "tempavg = 0\n",
+    "for temps in temperatures_C:\n",
+    "    tempavg += temps\n",
+    "tempavg = tempavg/len(temperatures_C)\n",
+    "\n",
+    "print(\"%.2f\" % tempavg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for hours in range(len(temperatures_C)):\n",
+    "    if temperatures_C[hours] == 0:\n",
+    "        temperatures_C[hours] = int((temperatures_C[hours - 1] + temperatures_C[hours +1])/2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temperatures_F = []\n",
+    "\n",
+    "for temps in temperatures_C:\n",
+    "    temperatures_F.append(round(temps*1.8 + 32, 2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cooling system needs to be changed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(temp70) > 4 or maxtemp > 80 or avgtemp > 65:\n",
+    "    print(\"The cooling system needs to be changed.\")\n",
+    "else:\n",
+    "    print(\"The cooling system is working correctly.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hours70 = []\n",
+    "\n",
+    "for temps in temperatures_C:\n",
+    "    if temps > 70:\n",
+    "        hours70.append(1)\n",
+    "    else:\n",
+    "        hours70.append(0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hours4 = 0\n",
+    "for value in hours70:\n",
+    "    if value == 0:\n",
+    "        hours4 = 0\n",
+    "    elif value == 1:\n",
+    "        hours4 += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cooling system needs to be changed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if hours4 > 4 or maxtemp > 80 or avgtemp > 65:\n",
+    "    print(\"The cooling system needs to be changed.\")\n",
+    "else:\n",
+    "    print(\"The cooling system is working correctly.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,16 +321,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average is 62.83ºC (145.10ºF).\n"
+     ]
+    }
+   ],
+   "source": [
+    "avgtempC = 0\n",
+    "\n",
+    "for temps in temperatures_C:\n",
+    "    avgtempC += temps\n",
+    "avgtempC = avgtempC/len(temperatures_C)\n",
+    "\n",
+    "avgtempF = 0\n",
+    "\n",
+    "for temps in temperatures_F:\n",
+    "    avgtempF += temps\n",
+    "avgtempF = avgtempF/len(temperatures_F)\n",
+    "\n",
+    "print(\"The average is %.2fºC (%.2fºF).\" % (avgtempC, avgtempF))\n",
+    "\n",
+    "#The relation between averages is the conversion formula from Celsius to Fahrenheit."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The deviation is 14.63ºC (26.34ºC)\n"
+     ]
+    }
+   ],
+   "source": [
+    "devtempC = 0\n",
+    "\n",
+    "for temps in temperatures_C:\n",
+    "    devtempC += (temps - avgtempC)**2\n",
+    "devtempC = (devtempC/(len(temperatures_C)))**(1/2)\n",
+    "\n",
+    "devtempF = 0\n",
+    "\n",
+    "for temps in temperatures_F:\n",
+    "    devtempF += (temps - avgtempF)**2\n",
+    "devtempF = (devtempF/(len(temperatures_F)))**(1/2)\n",
+    "\n",
+    "print(\"The deviation is %.2fºC (%.2fºC).\" % (devtempC, devtempF))\n",
+    "\n",
+    "#The relation between deviations is 1.8."
    ]
   },
   {
@@ -254,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
