--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -32,10 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gestures = [\"rock\", \"paper\", \"scissors\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rounds? 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_rounds = int(input(\"Number of rounds? \"))\n",
+    "if n_rounds %2 != 1:\n",
+    "    print(\"The number of rounds has to be odd. We have set it to 1.\")\n",
+    "    n_rounds = 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds_to_win = int(n_rounds / 2) + 1\n",
+    "print(rounds_to_win)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score = 0\n",
+    "player_score = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cpu_gesture():\n",
+    "    return random.choice(gestures)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def player_gesture():\n",
+    "    player_gesture = input(\"Which gesture do you want to show? \")\n",
+    "    while player_gesture not in gestures:\n",
+    "        player_gesture = input(\"Which gesture do you want to show? \")\n",
+    "    return player_gesture"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +175,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def whowins(cpu, player):\n",
+    "    if cpu == \"rock\":\n",
+    "        if player == \"rock\":\n",
+    "            return 0\n",
+    "        elif player == \"scissors\":\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2\n",
+    "    elif cpu == \"paper\":\n",
+    "        if player == \"paper\":\n",
+    "            return 0\n",
+    "        elif player == \"rock\":\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2\n",
+    "    else:\n",
+    "        if player == \"scissors\":\n",
+    "            return 0\n",
+    "        elif player == \"paper\":\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def roundresult(cpu, player):\n",
+    "    global cpu_score\n",
+    "    global player_score\n",
+    "    print(\"CPU showed %s and Player showed %s\" % (cpu, player))\n",
+    "    if whowins(cpu, player) == 0:\n",
+    "        print(\"It's a tie!\")\n",
+    "    elif whowins (cpu, player) == 1:\n",
+    "        print(\"CPU wins this round!\")\n",
+    "        cpu_score += 1\n",
+    "    else:\n",
+    "        print(\"Player wins this round!\")\n",
+    "        player_score += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,25 +244,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which gesture do you want to show? efdagd\n",
+      "Which gesture do you want to show? scissors\n",
+      "CPU showed scissors and Player showed scissors\n",
+      "It's a tie!\n",
+      "Which gesture do you want to show? pape\n",
+      "Which gesture do you want to show? paper\n",
+      "CPU showed rock and Player showed paper\n",
+      "Player wins!\n",
+      "Which gesture do you want to show? paper\n",
+      "CPU showed rock and Player showed paper\n",
+      "Player wins!\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds = 0\n",
+    "#cpu_score = 0 #for testing\n",
+    "#player_score = 0 #for testing\n",
+    "\n",
+    "while (rounds < n_rounds) and (cpu_score < rounds_to_win) and (player_score < rounds_to_win) :\n",
+    "    rounds += 1\n",
+    "    cpu = cpu_gesture()\n",
+    "    player = player_gesture()\n",
+    "    roundresult(cpu, player)"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "#### 11. Print the winner of the game based on who won more rounds.\n",
+    "rock#### 11. Print the winner of the game based on who won more rounds.\n",
     "Remember that the game might be tied. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The player wins!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if cpu_score > player_score:\n",
+    "    print(\"The CPU wins!\")\n",
+    "elif cpu_score < player_score:\n",
+    "    print(\"The player wins!\")\n",
+    "else:\n",
+    "    print(\"It's a tie.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,6 +319,117 @@
     "In addition, you will also need to improve how the game interacts with the player: the number of rounds to play, which must be an odd number, will be requested to the user until a valid number is entered. Define a new function to make that request.\n",
     "\n",
     "**Hint**: Try to reuse the code that you already coded in the previous challenge. If your code is efficient, this bonus will only consist of simple modifications to the original game."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rounds? 5\n",
+      "Which gesture do you want to show? rock\n",
+      "It's a tie!\n",
+      "Which gesture do you want to show? rock\n",
+      "CPU wins this round!\n",
+      "Which gesture do you want to show? rock\n",
+      "CPU wins this round!\n",
+      "Which gesture do you want to show? rock\n",
+      "CPU wins this round!\n",
+      "The CPU wins the game!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "gestures2 = [\"rock\", \"paper\", \"scissors\", \"lizard\", \"spock\"]\n",
+    "\n",
+    "n_rounds2 = int(input(\"Number of rounds? \"))\n",
+    "if n_rounds2 %2 != 1:\n",
+    "    print(\"The number of rounds has to be odd. We have set it to 1.\")\n",
+    "    n_rounds2 = 1\n",
+    "\n",
+    "rounds_to_win2 = int(n_rounds2 / 2) + 1\n",
+    "\n",
+    "cpu_score2 = 0\n",
+    "player_score2 = 0\n",
+    "\n",
+    "def cpu_gesture2():\n",
+    "    return random.choice(gestures2)\n",
+    "\n",
+    "def player_gesture2():\n",
+    "    player_gesture = input(\"Which gesture do you want to show? \")\n",
+    "    while player_gesture not in gestures2:\n",
+    "        player_gesture = input(\"Which gesture do you want to show? \")\n",
+    "    return player_gesture\n",
+    "\n",
+    "def whowins2(cpu, player):\n",
+    "    if cpu == \"rock\":\n",
+    "        if player == \"rock\":\n",
+    "            return 0\n",
+    "        elif player == \"scissors\" or player == \"lizard\":\n",
+    "            return 1\n",
+    "        elif player == \"spock\" or player == \"paper\":\n",
+    "            return 2\n",
+    "    elif cpu == \"paper\":\n",
+    "        if player == \"paper\":\n",
+    "            return 0\n",
+    "        elif player == \"spock\" or player == \"rock\":\n",
+    "            return 1\n",
+    "        elif player == \"scissors\" or player == \"lizard\":\n",
+    "            return 2\n",
+    "    elif cpu == \"scissors\":\n",
+    "        if player == \"scissors\":\n",
+    "            return 0\n",
+    "        elif player == \"lizard\" or player == \"paper\":\n",
+    "            return 1\n",
+    "        elif player == \"rock\" or player == \"spock\":\n",
+    "            return 2\n",
+    "    elif cpu == \"lizard\":\n",
+    "        if player == \"lizard\":\n",
+    "            return 0\n",
+    "        elif player == \"paper\" or player == \"spock\":\n",
+    "            return 1\n",
+    "        elif player == \"rock\" or player == \"scissors\":\n",
+    "            return 2\n",
+    "    elif cpu == \"spock\":\n",
+    "        if player == \"spock\":\n",
+    "            return 0\n",
+    "        elif player == \"rock\" or player == \"scissors\":\n",
+    "            return 1\n",
+    "        elif player == \"lizard\" or player == \"paper\":\n",
+    "            return 2\n",
+    "        \n",
+    "def roundresult2(cpu, player):\n",
+    "    global cpu_score2\n",
+    "    global player_score2\n",
+    "    if whowins2(cpu,player) == 0:\n",
+    "        print(\"It's a tie!\")\n",
+    "    elif whowins2(cpu,player) == 1:\n",
+    "        print(\"CPU wins this round!\")\n",
+    "        cpu_score2 += 1\n",
+    "    else:\n",
+    "        print(\"Player wins this round!\")\n",
+    "        player_score2 += 1\n",
+    "        \n",
+    "rounds2 = 0\n",
+    "\n",
+    "while (rounds2 < n_rounds2) and (cpu_score2 < rounds_to_win2) and (player_score2 < rounds_to_win2):\n",
+    "    rounds2 += 1\n",
+    "    cpu = cpu_gesture2()\n",
+    "    player = player_gesture2()\n",
+    "    roundresult2(cpu, player)\n",
+    "    \n",
+    "if cpu_score2 > player_score2:\n",
+    "    print(\"The CPU wins the game!\")\n",
+    "elif cpu_score2 < player_score2:\n",
+    "    print(\"The player wins the game!\")\n",
+    "else:\n",
+    "    print(\"It's a tie.\")"
    ]
   },
   {
@@ -226,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
