--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = len(gandalf)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for round in range(spells):\n",
+    "    if saruman[round] < gandalf[round]:\n",
+    "        gandalf_wins += 1\n",
+    "    else:\n",
+    "        saruman_wins += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "if gandalf_wins > saruman_wins:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif gandalf_wins < saruman_wins:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"Tie\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "spells = len(gandalf)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_power = []\n",
+    "saruman_power =[]\n",
+    "\n",
+    "for round in range(spells):\n",
+    "    gandalf_power.append(POWER[gandalf[round]])\n",
+    "    saruman_power.append(POWER[saruman[round]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for round in range(spells):\n",
+    "    if (saruman_wins != 3 and gandalf_wins !=3):\n",
+    "        if gandalf_power[round] > saruman_power[round]:\n",
+    "            gandalf_wins += 1\n",
+    "            saruman_wins = 0\n",
+    "        else:\n",
+    "            saruman_wins += 1\n",
+    "            gandalf_wins = 0\n",
+    "if gandalf_wins > saruman_wins:\n",
+    "     print(\"Gandalf wins.\")\n",
+    "else:\n",
+    "    print(\"Saruman wins.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +258,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average spell power for Gandalf is: 39.00.\n",
+      "The average spell power for Saruman is: 30.50.\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_gandalf = 0\n",
+    "avg_saruman = 0\n",
+    "for round in range(spells):\n",
+    "    avg_gandalf += gandalf_power[round]\n",
+    "    avg_saruman += saruman_power[round]\n",
+    "    \n",
+    "avg_gandalf = avg_gandalf/spells\n",
+    "avg_saruman = avg_saruman/spells\n",
+    "print(\"The average spell power for Gandalf is: %.2f.\" % avg_gandalf)\n",
+    "print(\"The average spell power for Saruman is: %.2f.\" % avg_saruman)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,6 +289,40 @@
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf's standar deviation of the spell power is: 15.95.\n",
+      "Saruman's standar deviation of the spell power is: 16.41.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dev_gandalf = 0\n",
+    "dev_saruman = 0\n",
+    "for round in range(spells):\n",
+    "    dev_gandalf += (gandalf_power[round] - avg_gandalf)**2\n",
+    "    dev_saruman += (saruman_power[round] - avg_saruman)**2\n",
+    "dev_gandalf = (dev_gandalf / (spells - 1))**(1/2)\n",
+    "dev_saruman = (dev_saruman / (spells - 1))**(1/2)\n",
+    "\n",
+    "print(\"Gandalf's standar deviation of the spell power is: %.2f.\" % dev_gandalf)\n",
+    "print(\"Saruman's standar deviation of the spell power is: %.2f.\" % dev_saruman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -221,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
