--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The bus made 9 stops.\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_stops = len(stops)\n",
+    "print(\"The bus made %d stops.\" % n_stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 3, -2, -1, 4, -4, -3, -2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "in_passengers = []\n",
+    "for current_stop in stops:\n",
+    "    in_passengers.append(current_stop[0] - current_stop[1])\n",
+    "print(in_passengers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum occupation of the bus has been: 14 passengers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "occupation = 0\n",
+    "occ_stop = []\n",
+    "for change in in_passengers:\n",
+    "    occupation += change\n",
+    "    occ_stop.append(occupation)\n",
+    "max_occ = max(occ_stop)\n",
+    "print(\"The maximum occupation of the bus has been: %d passengers.\" % max_occ)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,6 +132,48 @@
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average occupation has been 9.33 passengers.\n",
+      "The standard deviation of the occupation has been 1.89.\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_occ = 0\n",
+    "for c_stops in occ_stop:\n",
+    "    avg_occ += c_stops\n",
+    "avg_occ = avg_occ/n_stops\n",
+    "print(\"The average occupation has been %.2f passengers.\" %avg_occ)\n",
+    "\n",
+    "dev_occ =0\n",
+    "for c_stops in occ_stop:\n",
+    "    dev_occ = (c_stops - avg_occ)**2\n",
+    "dev_occ = (dev_occ/(n_stops-1))**(1/2)\n",
+    "print(\"The standard deviation of the occupation has been %.2f.\" %dev_occ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -117,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
