--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(4, 5), (5, 7), (-3, 2), (2, 2)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dub_point = []\n",
+    "for rep in points:\n",
+    "    rep_point = points.count(rep)\n",
+    "    if rep_point >1:\n",
+    "        dub_point.append(rep)\n",
+    "dub_point = set(dub_point)\n",
+    "print(dub_point)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +86,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 2 2 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_q1 = 0\n",
+    "count_q2 = 0\n",
+    "count_q3 = 0\n",
+    "count_q4 = 0\n",
+    "\n",
+    "for throw in points:\n",
+    "    if (throw[0] > 0 and throw[1]) > 0:\n",
+    "        count_q1 += 1\n",
+    "    elif throw[0] > 0 and throw[1] < 0:\n",
+    "        count_q2 += 1\n",
+    "    elif throw[0] < 0 and throw[1] > 0:\n",
+    "        count_q4 += 1\n",
+    "    elif throw[0] < 0 and throw[1] < 0:\n",
+    "        count_q3 += 1\n",
+    "\n",
+    "print(count_q1, count_q2, count_q3, count_q4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimum distance was 2.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def centerdist(xcoor, ycoor):\n",
+    " return (xcoor**2 + ycoor**2)**(1/2)\n",
+    "\n",
+    "totdist = []\n",
+    "for point in points:\n",
+    "  totdist.append(centerdist(point[0],point[1]))\n",
+    "\n",
+    "closest = min(totdist)\n",
+    "print(\"The minimum distance was %.1f.\" % closest)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +158,28 @@
    "source": [
     "#### 4. If the archery target has a radius of 9, calculate the number of arrows that won't hit the target. \n",
     "**Hint**: Use the function created in step 3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robin Hood hit the target 20 times.\n"
+     ]
+    }
+   ],
+   "source": [
+    "intarget = 0\n",
+    "\n",
+    "for pointdist in totdist:\n",
+    "    if pointdist <= 9:\n",
+    "        intarget += 1\n",
+    "print(\"Robin Hood hit the target %d times.\" % intarget)"
    ]
   },
   {
@@ -125,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
